--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -1,6 +1,10 @@
 # Jobs
 # VP of Global Communications
 
+# Chair and Organizer, NeMLA
+- company: Northeast Modern Language Association (NeMLA), Pittsburgh, March 2026 (forthcoming)
+  position: Chair & Organizer. Game, Text, Match: Diegetic Games as Narrative Systems
+
 # Unannounced Mobile Strategy Game
 - company: Marauder Tech
   position: Narrative Director
