--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,6 +1,13 @@
 # Projects
 # uncomment the urls if you wish to display them, and add your own URL
 
+
+# Northeast Modern Language Association (NeMLA) 2026 
+- project: Game, Text, Match: Diegetic Games as Narrative Systems
+  role: Chair and Organizer
+  duration: March 2026 
+  description: Organized and chaired an interdisciplinary panel on diegetic games in literature, film, and media. The session invited papers that treated fictional games as meaningful systems in their own right, applying game studies and narrative theory to analyze rule-based structures embedded within stories.
+
 # Shadow Math - ACH 2025 
 - project: Shadow Math - On Shirley Jackson and The Lottery - ACH 2025
   role: Author / Presenter
