--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -3,9 +3,9 @@
 
 # Unannounced Mobile Strategy Game
 - company: Marauder Tech
-  position: Narrative Director
+  position: Narrative Director, Quest Designer
   duration: May 2024 - Present (ongoing)
-  summary: Narrative Design, lorekeeping, and related duties. Ref. Contact - Brian Urbanek (Design Director) - Brian (at) maraudertech.net
+  summary: Narrative Design, lorekeeping, quest and mission design, character design and related duties. Ref. Contact - Shawn Borsky (Senior Product Manager) - shawn (at) maraudertech.net
 
 # Teaching at UCF
 - company: University of Central Florida
