--- a/_data/links.yml
+++ b/_data/links.yml
@@ -8,14 +8,20 @@
 # - url: "https://specialagentmerriam.com/files/Merriam_Haitian_is_My_Language.pdf"
 #   description: Haitian Literature as a Model for the publication World Literature Today (2014, via PDF)
 
+- url: "https://mwmxyz.github.io/academic/"
+  description: --- --- PUBLICATIONS, etc. --- ---
+
+- url: "https://www.valdosta.edu/"
+  description: FORTHCOMING PUBLICATION (Book Chapter) - Time, Escape Rooms, and Pedagogy (working title)
+  
 - url: "https://vimeo.com/881499662"
   description: VIRTUAL CONFERENCE PRESENTATION - Branch vs. Root, a talk on the best use of skill trees (rather than merit badges) in gamified curricula
 
 - url: "https://www.worldliteraturetoday.org/blog/interviews/unvarnished-tales-brothers-grimm-conversation-jack-zipes"
-  description: PUBLICATION - Interview with Fairy Tale expert Jack Zipes in World Literature Today
+  description: PUBLICATION - WORLD LITERATURE TODAY - Interview with Fairy Tale expert Jack Zipes 
 
 - url: "https://lareviewofbooks.org/article/adult-fairy-tales/"
-  description: PUBLICATION - Interview with Michael Cunningham, author of The Hours and The Snow Queen, LA Review of Books
+  description: PUBLICATION - LA REVIEW OF BOOKS - Interview with Michael Cunningham, author of The Hours and The Snow Queen
 
 - url: "https://specialagentmerriam.com/files/Merriam_Haitian_is_My_Language.pdf"
   description: PUBLICATION - Article on Haitian Literature as a model for World Literature, and an interview with Haitian author Franketienné
@@ -24,7 +30,7 @@
   description: My Escape Room blog (written with Paul S. Nowak), Partly Wicked
 
 - url: "https://www.nplusonemag.com/online-only/online-only/brothel-washington/"
-  description: PUBLICATION - This is Not a Brothel, article in n+1 about escorts in Washington DC
+  description: PUBLICATION - n+1 - This is Not a Brothel, article also reprinted in Salon.com
   
 - url: "https://https://thedrunkenodyssey.com/2023/08/06/587-a-discussion-of-myhouse-wad-for-doom-with-michael-merriam/"
   description: Guest spot on the literary podcast Drunken Odyssey, discussing the video game Doom and its mod entitled 'Myhouse.wad' as works of literature
