--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ resume_name:                    "Michael W. Merriam"
 resume_title:                   "Independent"
 
 # used for the contact button in _layouts/resume.html
-resume_contact_email:           "michael at ludoception dot com"
+resume_contact_email:           "michael@ludoception.com"
 
 # the next two items are used for schema itemprops in _layouts/resume.html
 resume_contact_telephone:       "917-455-1420"
@@ -32,7 +32,7 @@ resume_header_intro: "<p>My research centers on the intersection of game writing
 # or remove the resume_looking_for_work option entirely
 # to leave blank
 
-# resume_looking_for_work:        "no"
+resume_looking_for_work:        "yes"
 
 # Decide which sections to use
 # comment out to hide
