--- a/_config.yml
+++ b/_config.yml
@@ -18,9 +18,9 @@ resume_contact_email:           "michael@ludoception.com"
 
 # the next two items are used for schema itemprops in _layouts/resume.html
 resume_contact_telephone:       "917-455-1420"
-resume_contact_address:         "713 Black Eagle Drive, Groveland, FL, 34711"
+resume_contact_address:         "45 Academy Ave, Pittsburgh, PA, 15228"
 
-resume_header_contact_info:     "917-455-1420 • michael at ludoception dot com"
+resume_header_contact_info:     "917-455-1420 • michael@ludoception.com"
 display_header_contact_info:    "true"
 
 resume_header_intro: "<p>My research centers on the intersection of game writing and game design, with particular attention to how narrative craft interacts with systemic mechanics. I am especially interested in points where narrative elements—dialogue, rules text, quest structure—affect balance, difficulty, and pacing in ways typically described as design rather than writing. This allows me to frame game balance as a narrative tool, where adjustments in systems create new story rhythms and shape player experience.Methodologically, I combine practice-led prototyping with critical analysis of player communities. I look at how players interpret rules as stories, and stories as rules, across contexts such as modding, streaming, and classroom playtests. These sites show how narrative authority is shared between designers and players, and how creative writing in games extends into computational and communal domains. In pedagogy, I build curriculum models where the classroom operates as a design space. Students test mechanics and prose in tandem, with assessment structured around iteration, playtest documentation, and collaborative design. My broader aim is to develop frameworks that help writers think in systems and designers use narrative techniques, producing tools that can support both creative writing education and game studies research."
