--- a/_data/links.yml
+++ b/_data/links.yml
@@ -9,29 +9,28 @@
 #   description: Haitian Literature as a Model for the publication World Literature Today (2014, via PDF)
 
 # - url: "https://mwmxyz.github.io/academic/"
-- description: --- --- PUBLICATIONS, etc. --- ---
-- description: 
+- description: --- --- PUBLICATIONS, etc. --- ---<br>
 
 - url: "https://www.valdosta.edu/"
-  description: FORTHCOMING PUBLICATION (Book Chapter) - Time, Escape Rooms, and Pedagogy (working title)
+  description: FORTHCOMING PUBLICATION (Book Chapter) - Time, Escape Rooms, and Pedagogy (working title)<br>
   
 # - url: "https://vimeo.com/881499662"
 #  description: VIRTUAL CONFERENCE PRESENTATION - Branch vs. Root, a talk on the best use of skill trees (rather than merit badges) in gamified curricula
 
 - url: "https://lareviewofbooks.org/article/adult-fairy-tales/"
-  description: PUBLICATION - LA REVIEW OF BOOKS - Interview with Michael Cunningham, author of The Hours and The Snow Queen
+  description: PUBLICATION - LA REVIEW OF BOOKS - Interview with Michael Cunningham, author of The Hours and The Snow Queen<br>
   
 - url: "https://www.worldliteraturetoday.org/blog/interviews/unvarnished-tales-brothers-grimm-conversation-jack-zipes"
-  description: PUBLICATION - WORLD LITERATURE TODAY - Interview with Fairy Tale expert Jack Zipes 
+  description: PUBLICATION - WORLD LITERATURE TODAY - Interview with Fairy Tale expert Jack Zipes<br>
   
 - url: "https://specialagentmerriam.com/files/Merriam_Haitian_is_My_Language.pdf"
-  description: PUBLICATION - WORLD LITERATURE TODAY - Article on Haitian Literature as a model for World Literature, and an interview with Haitian author Franketienné
+  description: PUBLICATION - WORLD LITERATURE TODAY - Article on Haitian Literature as a model for World Literature, and an interview with Haitian author Franketienné<br>
 
 - url: "https://www.nplusonemag.com/online-only/online-only/brothel-washington/"
-  description: PUBLICATION - n+1 - This is Not a Brothel, article also reprinted in Salon.com
+  description: PUBLICATION - n+1 - This is Not a Brothel, article also reprinted in Salon.com<br>
 
 - url: "https://www.partlywicked.com/"
-  description: My Escape Room blog (written with Paul S. Nowak), Partly Wicked
+  description: My Escape Room blog (written with Paul S. Nowak), Partly Wicked<br>
   
 # - url: "https://https://thedrunkenodyssey.com/2023/08/06/587-a-discussion-of-myhouse-wad-for-doom-with-michael-merriam/"
 #  description: Guest spot on the literary podcast Drunken Odyssey, discussing the video game Doom and its mod entitled 'Myhouse.wad' as works of literature
