--- a/_data/links.yml
+++ b/_data/links.yml
@@ -12,7 +12,7 @@
 - description: --- --- PUBLICATIONS, etc. --- ---<br>
 
 - url: "https://www.valdosta.edu/"
-  description: FORTHCOMING PUBLICATION (Book Chapter) - Time, Escape Rooms, and Pedagogy (working title)<br>
+  description: FORTHCOMING PUBLICATION (Book Chapter) - Asynchronous Architectures of Ritual Time: Designing Synchronous Experience in Play and Pedagogy (working title)<br>
   
 # - url: "https://vimeo.com/881499662"
 #  description: VIRTUAL CONFERENCE PRESENTATION - Branch vs. Root, a talk on the best use of skill trees (rather than merit badges) in gamified curricula
