--- a/_data/links.yml
+++ b/_data/links.yml
@@ -9,28 +9,28 @@
 #   description: Haitian Literature as a Model for the publication World Literature Today (2014, via PDF)
 
 # - url: "https://mwmxyz.github.io/academic/"
-- description: --- --- PUBLICATIONS, etc. --- ---<br>
+- description: --- --- PUBLICATIONS, etc. --- ---<br><br>
 
 - url: "https://www.valdosta.edu/"
-  description: FORTHCOMING PUBLICATION (Book Chapter) - Asynchronous Architectures of Ritual Time: Designing Synchronous Experience in Play and Pedagogy (working title)<br>
+  description: FORTHCOMING PUBLICATION (Book Chapter) - Asynchronous Architectures of Ritual Time: Designing Synchronous Experience in Play and Pedagogy (working title)<br><br>
   
 # - url: "https://vimeo.com/881499662"
 #  description: VIRTUAL CONFERENCE PRESENTATION - Branch vs. Root, a talk on the best use of skill trees (rather than merit badges) in gamified curricula
 
 - url: "https://lareviewofbooks.org/article/adult-fairy-tales/"
-  description: PUBLICATION - LA REVIEW OF BOOKS - Interview with Michael Cunningham, author of The Hours and The Snow Queen<br>
+  description: PUBLICATION - LA REVIEW OF BOOKS - Interview with Michael Cunningham, author of The Hours and The Snow Queen<br><br>
   
 - url: "https://www.worldliteraturetoday.org/blog/interviews/unvarnished-tales-brothers-grimm-conversation-jack-zipes"
-  description: PUBLICATION - WORLD LITERATURE TODAY - Interview with Fairy Tale expert Jack Zipes<br>
+  description: PUBLICATION - WORLD LITERATURE TODAY - Interview with Fairy Tale expert Jack Zipes<br><br>
   
 - url: "https://specialagentmerriam.com/files/Merriam_Haitian_is_My_Language.pdf"
-  description: PUBLICATION - WORLD LITERATURE TODAY - Article on Haitian Literature as a model for World Literature, and an interview with Haitian author Franketienné<br>
+  description: PUBLICATION - WORLD LITERATURE TODAY - Article on Haitian Literature as a model for World Literature, and an interview with Haitian author Franketienné<br><br>
 
 - url: "https://www.nplusonemag.com/online-only/online-only/brothel-washington/"
-  description: PUBLICATION - n+1 - This is Not a Brothel, article also reprinted in Salon.com<br>
+  description: PUBLICATION - n+1 - This is Not a Brothel, article also reprinted in Salon.com<br><br>
 
 - url: "https://www.partlywicked.com/"
-  description: My Escape Room blog (written with Paul S. Nowak), Partly Wicked<br>
+  description: My Escape Room blog (written with Paul S. Nowak), Partly Wicked<br><br>
   
 # - url: "https://https://thedrunkenodyssey.com/2023/08/06/587-a-discussion-of-myhouse-wad-for-doom-with-michael-merriam/"
 #  description: Guest spot on the literary podcast Drunken Odyssey, discussing the video game Doom and its mod entitled 'Myhouse.wad' as works of literature
@@ -38,7 +38,7 @@
 # - url: "https://thedrunkenodyssey.com/2020/05/30/episode-422-michael-merriam/"
 #  description: As above, discussing the film and graphic novel 'Scott Pilgrim vs. The World'
 - url: "https://specialagentmerriam.com/dispatches/peer-gynt"
-  description: RADIO PRODUCTION - Peer Gynt (I was the script writer) as broadcast on national radio in 2018
+  description: RADIO PRODUCTION - Peer Gynt (I was the script writer) as broadcast on national radio in 2018<br><br>
   
 - url: "https://vimeo.com/manage/videos/68965793"
-  description: ART INSTALLATION (Film) - King John (short film) screened at the Shakespeare Birthplace 2013
+  description: ART INSTALLATION (Film) - King John (short film) screened at the Shakespeare Birthplace 2013<br><br>
