--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -5,7 +5,7 @@
 - company: Marauder Tech
   position: Narrative Director, Quest Designer
   duration: May 2024 - Present (ongoing)
-  summary: Narrative Design, lorekeeping, quest and mission design, character design and related duties. Ref. Contact - Shawn Borsky (Senior Product Manager) - shawn (at) maraudertech.net
+  summary: Narrative Design, lorekeeping, quest and mission design, character design and related duties. Ref. Contact - Shawn Borsky (Senior Product Manager) - shawn (at) borsky.co
 
 # Teaching at UCF
 - company: University of Central Florida
